# serializer version: 1
# name: test_mower_snapshot[_indexes]
  list([
    Index(code='uaqi', display_name='Universal AQI', color=Color(red=0.48235294, green=0.79607844, blue=0.2), category='good_air_quality', dominant_pollutant='o3', aqi=71, aqi_display='71'),
    Index(code='deu_uba', display_name='LQI (DE)', color=Color(red=0.3137255, green=0.8039216, blue=0.6666667), category='good_air_quality', dominant_pollutant='no2', aqi=None, aqi_display=None),
  ])
# ---
# name: test_mower_snapshot[_pollutants]
  list([
    Pollutant(code='co', display_name='CO', full_name='Carbon monoxide', concentration=Concentration(value=191.97, units='PARTS_PER_BILLION')),
    Pollutant(code='no2', display_name='NO2', full_name='Nitrogen dioxide', concentration=Concentration(value=16.97, units='PARTS_PER_BILLION')),
    Pollutant(code='o3', display_name='O3', full_name='Ozone', concentration=Concentration(value=35.17, units='PARTS_PER_BILLION')),
    Pollutant(code='pm10', display_name='PM10', full_name='Inhalable particulate matter (<10µm)', concentration=Concentration(value=13.53, units='MICROGRAMS_PER_CUBIC_METER')),
    Pollutant(code='pm25', display_name='PM2.5', full_name='Fine particulate matter (<2.5µm)', concentration=Concentration(value=4.61, units='MICROGRAMS_PER_CUBIC_METER')),
    Pollutant(code='so2', display_name='SO2', full_name='Sulfur dioxide', concentration=Concentration(value=1.37, units='PARTS_PER_BILLION')),
  ])
# ---
# name: test_mower_snapshot[all_aqi_categories]
  dict({
    '10_33': '10-33% of guideline',
    '1_blue': '1 - Blue',
    '1_green': '1 - Green',
    '1a_very_good': '1A - Very good air quality',
    '1b_good': '1B - Good air quality',
    '2_cyan': '2 - Cyan',
    '2_light_green': '2 - Light green',
    '2_orange': '4 - Orange',
    '2_red': '5 - Red',
    '2_yellow': '3 - Yellow',
    '2a_acceptable': '2A - Acceptable air quality',
    '2b_acceptable': '2B - Acceptable air quality',
    '33_66': '33-66% of guideline',
    '3_green': '3 - Green',
    '3a_aggravated': '3A - Aggravated air quality',
    '3b_bad': '3B - Bad air quality',
    '4_yellow_watch': '4 - Yellow/Watch',
    '5_orange_alert': '5 - Orange/Alert',
    '66_100': '66-100% of guideline',
    '6_red_alert': '6 - Red/Alert+',
    'above_average_air_pollution': 'Above average air pollution',
    'acceptable': 'Acceptable air quality',
    'acutely_unhealthy': 'Acutely unhealthy air quality',
    'alarm': 'Alarm level',
    'alert': 'Alert level',
    'average': 'Average air quality',
    'average_air_pollution': 'Average air pollution',
    'bad': 'Bad air quality',
    'below_10': 'Less than 10% of guideline',
    'below_average_air_pollution': 'Below average air pollution',
    'caution': 'Caution',
    'clean': 'Clean',
    'considerable_air_pollution': 'Considerable air pollution',
    'degraded': 'Degraded air quality',
    'desirable': 'Desirable air quality',
    'emergency': 'Emergency level',
    'evident_air_pollution': 'Evident air pollution',
    'excellent': 'Excellent air quality',
    'extremely_bad': 'Extremely bad air quality',
    'extremely_poor': 'Extremely poor air quality',
    'extremely_unfavorable': 'Extremely unfavorable air quality',
    'extremely_unhealthy': 'Extremely Unhealthy air quality',
    'fair': 'Fair air quality',
    'fairly_good': 'Fairly good air quality',
    'good': 'Good air quality',
    'greater_100': 'Greater than 100% of guideline',
    'hazardous': 'Hazardous air quality',
    'heavily_polluted': 'Heavily Polluted',
    'heavy': 'Heavy air pollution',
    'high': 'High air pollution',
    'high_air_pollution': 'High air pollution',
    'high_health_risk': 'High health risk',
    'horrible': 'Horrible air quality',
    'light': 'Light air pollution',
    'low': 'Low air quality',
    'low_air_pollution': 'Low air pollution',
    'low_health_risk': 'Low health risk',
    'medium': 'Medium air quality',
    'medium_air_pollution': 'Medium air pollution',
    'moderate': 'Moderate air quality',
    'moderate_air_pollution': 'Moderate air pollution',
    'moderate_health_risk': 'Moderate health risk',
    'moderately_polluted': 'Moderately polluted',
    'n1_good': 'N1 - Good air quality',
    'n2_moderate': 'N2 - Moderate air quality',
    'n3_bad': 'N3 - Bad air quality',
    'n4_very_bad': 'N4 - Very bad air quality',
    'n5_poor': 'N5 - Poor air quality',
    'normal': 'Normal',
    'polluted': 'Polluted',
    'poor': 'Poor air quality',
    'precautionary': 'Precautionary level',
    'reasonably_good': 'Reasonably good air quality',
    'regular': 'Regular air quality',
    'satisfactory': 'Satisfactory air quality',
    'serious_air_pollution': 'Serious air pollution',
    'seriously_polluted': 'Seriously Polluted',
    'severe': 'Severe air pollution',
    'slightly_polluted': 'Slightly Polluted',
    'sufficient': 'Sufficient air quality',
    'unfavorable': 'Unfavorable air quality',
    'unfavorable_sensitive': 'Unfavorable air quality for sensitive groups',
    'unhealthy': 'Unhealthy air quality',
    'unhealthy_sensitive': 'Unhealthy air quality for sensitive groups',
    'unsatisfactory': 'Unsatisfactory air quality',
    'very_bad': 'Very bad air quality',
    'very_good': 'Very good air quality',
    'very_high': 'Very High air pollution',
    'very_high_air_pollution': 'Very high air pollution',
    'very_high_health_risk': 'Very high health risk',
    'very_low': 'Very low air pollution',
    'very_low_air_pollution': 'Very low air pollution',
    'very_polluted': 'Very Polluted',
    'very_poor': 'Very poor air quality',
    'very_unfavorable': 'Very unfavorable air quality',
    'very_unhealthy': 'Very Unhealthy air quality',
    'warning_air_pollution': 'Warning level air pollution',
  })
# ---
# name: test_mower_snapshot[date_time]
  datetime.datetime(2025, 5, 25, 8, 0, tzinfo=datetime.timezone.utc)
# ---
# name: test_mower_snapshot[indexes_category_options]
  list([
    list([
      'Excellent air quality',
      'Good air quality',
      'Moderate air quality',
      'Low air quality',
      'Poor air quality',
    ]),
    list([
      'Very good air quality',
      'Good air quality',
      'Moderate air quality',
      'Poor air quality',
      'Very poor air quality',
    ]),
  ])
# ---
# name: test_mower_snapshot[region_code]
  'de'
# ---
